# deepspeed_llama

./: .gitignore  README.md  pyproject.toml
data/: example_train.jsonl  example_validation.jsonl
deepspeed_llama/: common.py  dataset.py  evaluation.py  huggingface.py
deepspeed_llama/models/: config.py  llama.py  model.py
experiments/example_sweeps/: 13b.yaml  30b.yaml
run/: agent_deepspeed.sh  sweep.py  train.py
